@@ -380,6 +380,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
+name|BuilderUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -2553,6 +2569,26 @@ name|appsFailed
 operator|.
 name|value
 argument_list|()
+return|;
+block|}
+DECL|method|getAllocatedResources ()
+specifier|public
+name|Resource
+name|getAllocatedResources
+parameter_list|()
+block|{
+return|return
+name|BuilderUtils
+operator|.
+name|newResource
+argument_list|(
+name|allocatedMB
+operator|.
+name|value
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
 return|;
 block|}
 DECL|method|getAllocatedMB ()
