@@ -754,6 +754,26 @@ name|resourcemanager
 operator|.
 name|scheduler
 operator|.
+name|QueueMetrics
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|scheduler
+operator|.
 name|ResourceScheduler
 import|;
 end_import
@@ -1193,6 +1213,11 @@ expr_stmt|;
 name|resourceManager
 operator|=
 literal|null
+expr_stmt|;
+name|QueueMetrics
+operator|.
+name|clearQueueMetrics
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|createConfiguration ()
@@ -2613,6 +2638,59 @@ name|getResourceUsage
 argument_list|()
 operator|.
 name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// verify metrics
+name|QueueMetrics
+name|queue1Metrics
+init|=
+name|scheduler
+operator|.
+name|getQueueManager
+argument_list|()
+operator|.
+name|getQueue
+argument_list|(
+literal|"queue1"
+argument_list|)
+operator|.
+name|getMetrics
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|queue1Metrics
+operator|.
+name|getAllocatedMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAllocatedMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|512
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -9154,6 +9232,19 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// Create request at higher priority
 name|createSchedulingRequestExistingApplication
 argument_list|(
@@ -9237,6 +9328,19 @@ name|containerId
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// Schedule at opening
 name|scheduler
 operator|.
@@ -9299,6 +9403,19 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -11301,6 +11418,141 @@ name|getReservedContainers
 argument_list|()
 operator|.
 name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testRemoveNodeUpdatesRootQueueMetrics ()
+specifier|public
+name|void
+name|testRemoveNodeUpdatesRootQueueMetrics
+parameter_list|()
+block|{
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RMNode
+name|node1
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|1
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|1024
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|NodeAddedSchedulerEvent
+name|addEvent
+init|=
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|addEvent
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+comment|// update shouldn't change things
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|NodeRemovedSchedulerEvent
+name|removeEvent
+init|=
+operator|new
+name|NodeRemovedSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|removeEvent
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+comment|// update shouldn't change things
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getRootQueueMetrics
+argument_list|()
+operator|.
+name|getAvailableMB
 argument_list|()
 argument_list|)
 expr_stmt|;
