@@ -367,6 +367,9 @@ Release 2.0.5-beta - UNRELEASED
 
     YARN-637. FS: maxAssign is not honored. (kkambatl via tucu)
 
+    YARN-655. Fair scheduler metrics should subtract allocated memory from 
+    available memory. (sandyr via tucu)
+
 Release 2.0.4-alpha - 2013-04-25 
 
   INCOMPATIBLE CHANGES
